View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023804 | Open CASCADE | OCCT:Visualization | public | 2013-02-27 17:55 | 2014-11-11 12:52 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0023804: Unexpected color modulation during texture mapping | ||||
Description | AIS_TexturedShape seems to always create Graphic3d_AspectFillArea3d instance with some default material attributes (brass). As the result, unexpected modulate effect is observed between the texel color and material color (for brass ambient color is yellow - see attached screenshot), even if some different color is specified for the interactive object. Another minor issue is that there is no way in DRAW to disable color modulation for AIS_TexturedShape. It makes sense to improve vtexture or related command(s). | ||||
Steps To Reproduce | pload ALL box b 100 100 100 vinit vdisplay b vfit vsetdispmode b 1 vsetmaterial b plastic vsetcolor b ANTIQUEWHITE # After this line, the textured shape appears with yellow ambient color vtexture b 3 # This line has no effect vsetcolor b ANTIQUEWHITE | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug23804 | ||||
2013-02-27 17:55 developer |
yellow_modulation.png (142,064 bytes) |
|
Seems to be the same as good old 0003038 |
|
Dear kgv, please review the patch in branch CR23804. |
|
Patch is ready for testing in branch CR23804_1. |
|
Dear BugMaster, Branch CR23804_1 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 18da1c3e3db9968c39550f3bb0f4165a634d8d21 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) MacOS: 351 (351 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR24804-1-master-occt/Debian60-64/bugs/vis/bug23804.html bugs vis(004) bug23804: OK Testing on Linux: Total MEMORY difference: 355037844 / 355768204 Total CPU difference: 58961.61 / 55245.89999999973 Testing on Windows: Total MEMORY difference: 378887436 / 381791492 Total CPU difference: 33721.640625 / 43080.4375 There are no differences in images found by testdiff. |
occt: master 7389f96d 2014-05-08 07:26:39
Committer: bugmaster Details Diff |
0023804: Visualization - unexpected color modulation during texture mapping AIS_TexturedShape - use material set to the Drawer, not default undefined one Test case for issue CR23804 |
Affected Issues 0023804 |
|
mod - src/AIS/AIS_TexturedShape.cxx | Diff File | ||
mod - src/AIS/AIS_TexturedShape.hxx | Diff File | ||
add - tests/bugs/vis/bug23804 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-02-27 17:55 |
|
New Issue | |
2013-02-27 17:55 |
|
Assigned To | => san |
2013-02-27 17:55 |
|
File Added: yellow_modulation.png | |
2013-02-27 18:11 |
|
Severity | major => minor |
2013-02-27 18:11 |
|
Summary | Unexpected modulate effect of texture mapping => Unexpected color modulation during texture mapping |
2013-02-27 18:11 |
|
Description Updated | |
2013-02-27 20:35 |
|
Relationship added | related to 0003038 |
2013-02-27 20:35 |
|
Note Added: 0023510 | |
2013-12-12 10:59 |
|
Target Version | 6.7.0 => 6.7.1 |
2014-02-05 14:41 | kgv | Status | new => assigned |
2014-04-04 18:16 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-04-17 14:44 |
|
Relationship added | related to 0024855 |
2014-04-22 18:56 |
|
Assigned To | san => dbp |
2014-04-25 10:15 |
|
Note Added: 0029066 | |
2014-04-25 10:15 |
|
Assigned To | dbp => kgv |
2014-04-25 10:15 |
|
Status | assigned => resolved |
2014-04-25 15:32 | kgv | Note Added: 0029079 | |
2014-04-25 15:32 | kgv | Assigned To | kgv => bugmaster |
2014-04-25 15:32 | kgv | Status | resolved => reviewed |
2014-04-25 17:55 |
|
Assigned To | bugmaster => mkv |
2014-05-06 13:02 |
|
Note Added: 0029211 | |
2014-05-06 13:03 |
|
Test case number | => bugs vis(004) bug23804 |
2014-05-06 13:03 |
|
Assigned To | mkv => bugmaster |
2014-05-06 13:03 |
|
Status | reviewed => tested |
2014-05-12 16:20 | bugmaster | Changeset attached | => occt master 7389f96d |
2014-05-12 16:20 | bugmaster | Status | tested => verified |
2014-05-12 16:20 | bugmaster | Resolution | open => fixed |
2014-11-11 12:47 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |