0023804: Visualization - unexpected color modulation during texture mapping

AIS_TexturedShape - use material set to the Drawer, not default undefined one

Test case for issue CR23804